--- a/src/app/components/user-create/user-create.component.html
+++ b/src/app/components/user-create/user-create.component.html
@@ -7,7 +7,7 @@
             <label for="inputName">First Name</label>
             <input class="form-control" type="text" formControlName="firstName">
             <!-- error -->
-            <div class="invalid-feedback" *ngIf="submitted && myForm.firstName.errors?.required">
+            <div class="text-danger" *ngIf="submitted && myForm.firstName.errors?.required">
               First Name is required.
             </div>
           </div>
@@ -15,7 +15,7 @@
             <label for="inputName">Last Name</label>
             <input class="form-control" type="text" formControlName="lastName">
             <!-- error -->
-            <div class="invalid-feedback" *ngIf="submitted && myForm.lastName.errors?.required">
+            <div class="text-danger" *ngIf="submitted && myForm.lastName.errors?.required">
               Last Name is required.
             </div>
           </div>
@@ -24,10 +24,10 @@
             <label for="inputEmail3">Email</label>
             <input class="form-control" type="text" formControlName="email">
             <!-- error -->
-            <div class="invalid-feedback" *ngIf="submitted && myForm.email.errors?.required">
+            <div class="text-danger" *ngIf="submitted && myForm.email.errors?.required">
               Enter your email.
             </div>
-            <div class="invalid-feedback" *ngIf="submitted && myForm.email.errors?.pattern">
+            <div class="text-danger" *ngIf="submitted && myForm.email.errors?.pattern">
               Enter valid email.
             </div>
           </div>
@@ -35,10 +35,10 @@
             <label for="inputVerify3">Mobile No</label>
             <input class="form-control" type="text" formControlName="phoneNumber">
             <!-- error -->
-            <div class="invalid-feedback" *ngIf="submitted && myForm.phoneNumber.errors?.required">
+            <div class="text-danger" *ngIf="submitted && myForm.phoneNumber.errors?.required">
               Enter your phone number.
             </div>
-            <div class="invalid-feedback" *ngIf="submitted && myForm.phoneNumber.errors?.pattern">
+            <div class="text-danger" *ngIf="submitted && myForm.phoneNumber.errors?.pattern">
               Enter Numbers Only
             </div>
           </div>
